mouse: Stop syndaemon when settings-daemon dies

Ensure that a spawned syndaemon gets killed when settings-daemon exists due to
a crash, a keyboard interrupt, etc. This avoids having multiple syndaemons run
at the same time, which can lead to the trackpad malfunctioning.

This uses prctl(PR_SET_PDEATHSIG), so only works on Linux.

https://bugzilla.gnome.org/show_bug.cgi?id=668667